--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_svg: ^2.0.7
+  velocity_x: ^4.1.1
 
 dev_dependencies:
   flutter_test:
