--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_svg: ^2.0.7
   velocity_x: ^4.1.1
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
